--- a/ishare_app/lib/l10n/app_fr.arb
+++ b/ishare_app/lib/l10n/app_fr.arb
@@ -372,11 +372,47 @@
   "noBookingsMessage": "Aucun trajet réservé pour le moment.",
   "noOffersMessage": "Vous n'avez publié aucun trajet.",
   "rideRequests": "Demandes de trajet",
-
-    "editProfile": "Modifier le profil",
-    "accountSettings": "Paramètres du compte",
-    "contactUs": "Contactez-nous",
-    "logOut": "Se déconnecter"
-
-
+  "editProfile": "Modifier le profil",
+  "accountSettings": "Paramètres du compte",
+  "contactUs": "Contactez-nous",
+  "logOut": "Se déconnecter",
+  "paymentPhoneNumber": "Numéro de téléphone pour paiement",
+  "paymentInstructions": "Veuillez envoyer le montant de l'abonnement à ce numéro de téléphone via Mobile Money (MTN/Airtel). Après le paiement, votre abonnement sera activé automatiquement.",
+  "subscriptionTitle": "Abonnement",
+  "subscriptionStatus": "Statut de l'abonnement",
+  "trialPeriod": "Période d'essai",
+  "activeSubscription": "Abonnement actif",
+  "subscriptionExpired": "Abonnement expiré",
+  "daysRemaining": "{days} jours restants",
+  "@daysRemaining": {
+    "placeholders": {
+      "days": {
+        "type": "int"
+      }
+    }
+  },
+  "pleaseRenewSubscription": "Veuillez renouveler pour continuer à utiliser iShare",
+  "subscriptionPlans": "Plans d'abonnement",
+  "perMonth": "par mois",
+  "renewSubscription": "Renouveler l'abonnement",
+  "subscribeNow": "S'abonner maintenant",
+  "payAmount": "Payer {amount} RWF",
+  "@payAmount": {
+    "placeholders": {
+      "amount": {
+        "type": "String"
+      }
+    }
+  },
+  "trialEndsIn": "Votre période d'essai se termine dans {days} jours. Abonnez-vous maintenant pour continuer à utiliser iShare après l'essai.",
+  "@trialEndsIn": {
+    "placeholders": {
+      "days": {
+        "type": "int"
+      }
+    }
+  },
+  "paymentViaMobileMoney": "Paiement via Mobile Money (MTN/Airtel)",
+  "passengerLabel": "Passager",
+  "driverLabel": "Conducteur"
 }
